# fini-infra

./: .gitignore  .markdownlint.yml  .repo.toml  CLAUDE.md  README.md  justfile
.claude/: settings.local.json
.config/: .terraform-docs.yml
.github/: SECURITY.md  renovate.json
.github/workflows/: actionlint.yml  auto-assign.yml  checkov.yml  gitleaks.yml  markdownlint.yml  packer-lint.yml  terraform-ci.yml  terraform-lint.yml  zizmor.yml
.just/: deploy-ssh.just  packer.just  pr-hook.just  repo-toml.sh
architecture/: README.md
architecture/diagrams/: README.md  authelia.py  do-app-platform.py  otel-example.py  pyproject.toml  static-web.py
l0_billing/: README.md
l1_privilege/: README.md
l1_privilege/do-spaces-keys/: README.md  getkeys.sh  main.tf  outputs.tf  providers.tf  variables.tf
l2_network/: README.md
l2_network/vpc-ric1/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
l3_permissions/: README.md
l3_permissions/deploy-ssh-key/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
l4_data/: README.md
l4_data/fini-logs-search/: README.md  app-platform-log-config.example.yaml  ism.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
l4_data/logs-cdn/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
l4_data/tfstate/: README.md  error.txt  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
l4_data/web-content/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
l5_compute/: README.md
l6_ingress/: README.md
l7_application/: README.md
opentofu/: README.md
(+42 files in other folders)
